Updates chapter2/section2.md
Auto commit by GitBook Editor